<resources>
    <string name="app_name">Shopping Center</string>

    <string name="register">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_nueva_hint">Nueva Contraseña</string>
    <string name="signup_login_hint">¿Ya tienes una cuenta? Iniciar Sesión</string>
    <string name="login_signup_hint">¿No tienes una cuenta? Registrarse</string>
    <string name="login_name_hint">Nombre</string>
    <string name="login_mobile_number_hint">Número de teléfono</string>
    <string name="text_forgot_password">¿Se te olvidó tu contraseña?</string>
    <string name="text_recuperar_password">
        No hay problema. Simplemente déjenos saber su dirección
        de correo electrónico y le enviaremos un Nuevo Password.
    </string>
    <string name="dajelo_blanco">Déjalo en blanco para no cambiarlo</string>
    <string name="min_8_caracteres">Debe tener al menos 8 caracteres</string>
    <string name="min_4_caracteres">Debe tener al menos 4 caracteres</string>
    <string name="error_email">Debe ser un Email valido</string>
    <string name="error_telefono">Debe ser un Teléfono valido</string>
    <string name="error_email_registrado">Email ya Registrado</string>
    <string name="ingrese_password">Ingrese Password</string>
    <string name="ingrese_email">Ingrese un Email</string>
    <string name="ingrese_nombre">Ingrese un Nombre</string>
    <string name="ingrese_telefono">Ingrese un Telefono</string>
    <string name="no_internet">Verifique el estado de su conexión y vuelva a intentarlo</string>
    <string name="email_send">¡Le hemos enviado por correo electrónico su nueva contraseña!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_principal">Principal</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_tiendas">Tiendas</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_carrito">Carrito</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_cerrar">Cerrar</string>

</resources>