<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.leothan.shoppingcenter.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categorias"
        android:name="com.leothan.shoppingcenter.ui.categorias.CategoriasFragment"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.leothan.shoppingcenter.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />
    <fragment
        android:id="@+id/nav_principal"
        android:name="com.leothan.shoppingcenter.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_tiendas"
        android:name="com.leothan.shoppingcenter.ui.tiendas.TiendasFragment"
        android:label="@string/menu_tiendas"
        tools:layout="@layout/fragment_tiendas" />
    <fragment
        android:id="@+id/nav_carrito"
        android:name="com.leothan.shoppingcenter.ui.carrito.CarritoFragment"
        android:label="@string/menu_carrito"
        tools:layout="@layout/fragment_carrito" />
    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.leothan.shoppingcenter.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedidos"
        tools:layout="@layout/fragment_pedidos" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.leothan.shoppingcenter.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.leothan.shoppingcenter.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>