<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_shopping_bag"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_shopping_basket"
            android:title="@string/menu_carrito" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account_box"
            android:title="@string/menu_perfil" />
    </group>
</menu>