<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/loginHeader"
        android:layout_marginStart="30dp"
        android:text="Registro"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="12dp"
            android:hint="@string/login_email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:minWidth="320dp"
            android:minHeight="50dp"
            android:singleLine="true"
            android:textColor="@color/barLoginColor"
            android:textColorHint="@color/textColorHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textColor="@color/barLoginColor"
                android:textColorHint="@color/textColorHint"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="12dp"
                android:hint="@string/login_name_hint"
                android:imeOptions="actionNext"
                android:minWidth="320dp"
                android:minHeight="50dp"
                android:singleLine="true"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textColor="@color/barLoginColor"
                android:textColorHint="@color/textColorHint"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="12dp"
                android:hint="@string/login_mobile_number_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:minWidth="320dp"
                android:minHeight="50dp"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textColor="@color/barLoginColor"
                android:textColorHint="@color/textColorHint"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="12dp"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minWidth="320dp"
                android:minHeight="50dp" />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        style="@style/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginEnd="12dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/goLogin"
        style="@style/TextyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/signup_login_hint" />

</LinearLayout>