<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:padding="10dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Nombre"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvEMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="developer@appsnipp.com"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="042433866000"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="Actualizar datos"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="12dp"
                    android:hint="@string/login_email_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:minWidth="320dp"
                    android:minHeight="50dp"
                    android:singleLine="true"
                    android:textColor="@color/barLoginColor"
                    android:textColorHint="@color/textColorHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/barLoginColor"
                    android:textColorHint="@color/textColorHint"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="12dp"
                    android:hint="@string/login_name_hint"
                    android:imeOptions="actionDone"
                    android:minWidth="320dp"
                    android:minHeight="50dp"
                    android:singleLine="true"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <EditText
                    android:id="@+id/et_telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/barLoginColor"
                    android:textColorHint="@color/textColorHint"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="12dp"
                    android:hint="@string/login_mobile_number_hint"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:minWidth="320dp"
                    android:minHeight="50dp"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <EditText
                    android:id="@+id/et_actual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/barLoginColor"
                    android:textColorHint="@color/textColorHint"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/login_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:textColor="@color/barLoginColor"
                    android:textColorHint="@color/textColorHint"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="12dp"
                    android:hint="@string/login_nueva_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minWidth="320dp"
                    android:minHeight="50dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                style="@style/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:layout_marginEnd="12dp"
                android:text="Guardar Cambios" />

            <View
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


